<resources>
    <string name="app_name">charlie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_card">Rate Card</string>
    <string name="title_banner">Waktumu, Kreatormu, Pilihanmu!</string>
    <string name="label_description_rate_card">Deskripsi Rate card</string>
    <string name="description_rate_card">Rate Card adalah sesi terjadwal untuk private call dengan jadwal sesuai kesepakatan Kreator dan Audiens</string>
    <string name="label_cara_pakai">Cara Pakai</string>
    <string name="description_cara_pakai">1. Pilih Kreator\n2. Lihat jadwal. Kreator sudah menyediakan jadwal, tetapi kamu masih bisa memilih\n3. Jika kamu memilih jadwal yang telah disediakan, checkout\n4. Jika kamu milih jadwal secara custom, lakukan checkout, tunggu untuk diterima kreator\n5. Kamu bisa membayar rate card pilihanmu!\n6. Ratecard kini dapat digunakan</string>
    <string name="label_keuntungan_rate_card">Keuntungan Rate Card</string>
    <string name="description_keuntungan_rate_card">• Bisa ketemu creator favoritmu secara pribadi\n• 1 on 1 meeting\n• Jadwal fleksibel\n• Durasi sebanyak yang kamu mau\nBicarakan topik dengan lebih intens</string>
    <string name="label_Beli_Rate_Card_sekarang">Beli Rate Card sekarang</string>
    <string name="title_onboard">Bebagai sesi menarik untukmu</string>
    <string name="sub_title_onboard">Silahkan pilih tipe akun yang sesuai untukmu!</string>
    <string name="label_audiens">Audiens</string>
    <string name="label_kreator">Kreator</string>
    <string name="desc_audiens">Mulai ngobrol dengan kreator</string>
    <string name="desc_kreator">Mulai ngobrol dengan audiens</string>
    <string name="dummy_text">lorem_ipsum</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et luctus leo, quis aliquam est. Fusce at arcu ligula. Nullam in mauris ac sapien suscipit egestas…</string>
    <string name="dummy_time">20</string>
    <string name="menit">menit</string>
    <string name="label_jadwal_tersedia">Jadwal Tersedia</string>
    <string name="label_request_jadwal">Request Jadwal</string>
    <string name="label_tanggal">Tanggal</string>
    <string name="label_jam">Jam</string>
    <string name="label_pilih_tanggal">Pilih Tanggal</string>
    <string name="colon">:</string>
    <string name="default_jam_00">00</string>
    <string name="default_menit_00">00</string>
    <string name="kreator_name">adindamarala</string>
    <string name="kreator_full_name">Adinda Marala</string>
    <string name="kreator_job">Artist, Musisi</string>
    <string name="kreator_team">Managed by Rans Entertainment</string>
    <string name="label_sesi">Sesi</string>
    <string name="label_pengikut">Pengikut</string>
    <string name="label_penilaian">Penilaian</string>
    <string name="dummy_sesi">56</string>
    <string name="dummy_pengikut">468</string>
    <string name="dummy_penilaian">4,7</string>
    <string name="label_informasi">Informasi</string>
    <string name="label_layanan">Layanan</string>
    <string name="label_ulasan">Ulasan</string>
    <string name="label_booking">Booking</string>
    <string name="label_private_video_call">Private Video Call</string>
    <string name="label_durasi_60_menit">Durasi 60 Menit</string>
    <string name="label_rp">Rp</string>
    <string name="default_rp">000</string>
    <string name="label_durasi">Durasi</string>
    <string name="default_durasi">00</string>
    <string name="label_menit">menit</string>
    <string name="label_halo">Halo,</string>
    <string name="label_saldo_dompet">Saldo Dompet</string>
    <string name="label_rp4000000">Rp40.000.000</string>
    <string name="label_tarik_saldo">Tarik Saldo</string>
    <string name="label_buat_jadwal_sesi">Buat Jadwal Sesi</string>
    <string name="label_menu_bundling">Menu Bundling</string>
    <string name="label_menu_rate_card">Menu Rate Card</string>
    <string name="label_sesi_terjadwal">Sesi Terjadwal</string>
    <string name="label_permintaan_jadwal">Permintaan Jadwal</string>
    <string name="requester_name">Jamal Junaedi</string>
    <string name="label_tanggal_with_colon">Tanggal : </string>
    <string name="dummy_date">xx/xx/xxxx</string>
    <string name="label_pukul_with_colon">Pukul : </string>
    <string name="dummy_xx">xx</string>
    <string name="label_tolak">Tolak</string>
    <string name="label_terima">Terima</string>
    <string name="label_1_1_peserta">1/1 Peserta</string>
    <string name="label_strip">-</string>
    <string name="label_wib">WIB</string>
    <string name="label_lihat_detail">Lihat Detail</string>
    <string name="label_detail_video_call">Detail Video Call</string>
    <string name="label_diskusi_jadwal_bareng_audiens">Diskusi Jadwal Bareng Audiens</string>
    <string name="label_edit">Edit</string>
    <string name="label_peserta_private_call">Peserta Private Call</string>
    <string name="label_mulai_sekarang">Mulai Sekarang</string>
    <string name="label_publik">Publik</string>
    <string name="label_privat">Privat</string>
    <string name="label_agustus_2023">Agustus 2023</string>
    <string name="desc_terima">Jangan lupa tentukan jadwal bareng Audience-mu ya, pembatalan otomatis jika tidak ada konfirmasi dalam 2x24jam.</string>
    <string name="label_konfirmasi_penerimaan">Konfirmasi Penerimaan</string>
    <string name="label_kirim">Kirim</string>
    <string name="label_konfirmasi_pembatalan">Konfirmasi Pembatalan</string>
    <string name="opsi_1">Saya tidak tersedia sementara waktu</string>
    <string name="opsi_2">Saya terlalu banyak menerima permintaan</string>
    <string name="opsi_3">Saya ingin mengubah harga permintaan</string>
    <string name="opsi_4">Orang tersebut pernah mengancam saya</string>
    <string name="opsi_5">Lainnya</string>
    <string name="label_pilih_hari_tanggal">Pilih hari/tanggal</string>
</resources>