<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_rate_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_20dp"
    android:layout_marginTop="@dimen/margin_18dp"
    app:cardCornerRadius="@dimen/corner_12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_requester_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/container_circle_white"
            android:clipToOutline="true"
            android:src="@drawable/requester_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_requester_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/requester_name"
            android:textAppearance="@style/TextAppearance.Dinotis.Body.Small.Bold"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toEndOf="@id/iv_requester_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_sesi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6dp"
            android:text="@string/label_sesi"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.Small.SemiBold"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_12sp"
            app:layout_constraintStart_toStartOf="@id/tv_requester_name"
            app:layout_constraintTop_toBottomOf="@id/tv_requester_name" />

        <TextView
            android:id="@+id/tv_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:text="@string/colon"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.Small.SemiBold"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_sesi"
            app:layout_constraintStart_toEndOf="@id/tv_label_sesi"
            app:layout_constraintTop_toTopOf="@id/tv_label_sesi" />

        <TextView
            android:id="@+id/tv_title_rate_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:ellipsize="end"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.Small.SemiBold"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_sesi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_colon"
            app:layout_constraintTop_toTopOf="@id/tv_label_sesi"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/tv_label_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/label_tanggal_with_colon"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Reguler"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintStart_toStartOf="@id/tv_label_sesi"
            app:layout_constraintTop_toBottomOf="@id/tv_label_sesi" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_date"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Reguler"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_10sp"
            android:layout_marginStart="@dimen/margin_1dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_tanggal"
            app:layout_constraintStart_toEndOf="@id/tv_label_tanggal"
            app:layout_constraintTop_toTopOf="@id/tv_label_tanggal" />

        <TextView
            android:id="@+id/tv_label_pukul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pukul_with_colon"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Reguler"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintStart_toStartOf="@id/tv_label_tanggal"
            app:layout_constraintTop_toBottomOf="@id/tv_label_tanggal" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_xx"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Reguler"
            android:textColor="@color/text_black"
            android:layout_marginStart="@dimen/margin_1dp"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_pukul"
            app:layout_constraintStart_toEndOf="@id/tv_label_pukul"
            app:layout_constraintTop_toTopOf="@id/tv_label_pukul" />


        <TextView
            android:id="@+id/tv_label_rp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/label_rp"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Bold"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintStart_toStartOf="@id/tv_label_sesi"
            app:layout_constraintTop_toBottomOf="@id/tv_label_pukul" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_rp"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Bold"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_rp"
            app:layout_constraintStart_toEndOf="@id/tv_label_rp"
            app:layout_constraintTop_toTopOf="@id/tv_label_rp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_circle_dark"
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:src="@drawable/circle_dark"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_rp"
            app:layout_constraintStart_toEndOf="@id/tv_price"
            app:layout_constraintTop_toTopOf="@id/tv_label_rp" />

        <TextView
            android:id="@+id/tv_label_durasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@string/label_durasi"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Bold"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_rp"
            app:layout_constraintStart_toEndOf="@id/iv_circle_dark"
            app:layout_constraintTop_toTopOf="@id/tv_label_rp" />

        <TextView
            android:id="@+id/tv_durasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:text="@string/default_durasi"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Bold"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_rp"
            app:layout_constraintStart_toEndOf="@id/tv_label_durasi"
            app:layout_constraintTop_toTopOf="@id/tv_label_rp" />

        <TextView
            android:id="@+id/tv_label_menit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:text="@string/label_menit"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.Bold"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_rp"
            app:layout_constraintStart_toEndOf="@id/tv_durasi"
            app:layout_constraintTop_toTopOf="@id/tv_label_rp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tolak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/button_light_purple_outlined"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="@dimen/margin_42dp"
            android:paddingVertical="@dimen/margin_8dp"
            android:text="@string/label_tolak"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.SemiBold"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintEnd_toStartOf="@id/btn_terima"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/tv_label_sesi"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_terima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_light_purple"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="@dimen/margin_42dp"
            android:paddingVertical="@dimen/margin_8dp"
            android:text="@string/label_terima"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.DinotisOriginal.Body.VerySmall.SemiBold"
            android:textColor="@color/white"
            android:textSize="@dimen/text_10sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_tolak"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_tolak"
            app:layout_constraintTop_toTopOf="@id/btn_tolak" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>